.config/eww/eww.scss
* {
  all: unset; // Unsets everything so you can style everything from scratch
}

// Global Styles
.bar {
  background-color: #1a1b26;
  color: #9abdf5;
  padding: 10px;
  font-family: "DejaVuSansM Nerd Font Propo";
}

// Styles on classes (see eww.yuck for more information)

.power-menu label,
.gpaste label,
.volume label,
.brigthness label,
.dunst label,
.player-controls label,
.workspace label {
  padding-left: 5px;
  padding-right: 5px;
}

.workspace {
  color: #404e65;
}


.workspace:hover {
  color: #9abdf5;
}

.workspace:active {
  color: #9abdf5;
}

.tray menu {
  background-color: #1a1b26;
  padding: 20px 0;
  border: solid 1px #9abdf5;
  border-radius: 0.75rem;

  >menuitem {
    padding: 0 20px;

    &:disabled label {
      color: gray;
    }

    &:hover {
      background-color: rgba(0, 0, 0, 0.25);
    }
  }
}

